# tiny-log-parser

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml
tests/: test_parser.py
tiny_log_parser/: __init__.py  cli.py  parser.py
