[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tiny-log-parser"
version = "0.1.0"
description = "Fast, dependency-free Python developer utility for parsing large application server logs."
authors = [
  { name="Your Name" },
]
readme = "README.md"
requires-python = ">=3.8"
keywords = ["log", "parser", "cli", "utility"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
tiny-log = "tiny_log_parser.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]
